# pyproject

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  rename.sh
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yaml  labeler.yaml  lint.yaml  test.yaml  zizmor.yaml
config/: template.config.yaml  template.env
docker/: Dockerfile  docker-compose.yaml
src/pyproject/: config.py  main.py
src/pyproject/infrastructure/config/: loader.py
src/pyproject/infrastructure/logger/: __init__.py  config.py  setup.py
tests/unit/: test_config.py  test_logger.py  test_version.py
