[project]
name = "pyproject"
version = "0.1.0"
description = "Minimal infrastructure settings for a quick start of a python project."
readme = "README.md"
authors = [
    {name = "treaditup", email = "treaditup@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = []

[project.urls]
"Source" = "https://github.com/draincoder/pyproject"
"Homepage" = "https://github.com/draincoder/pyproject"

[dependency-groups]
lint = [
    "ruff>=0.14.10",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120
target-version="py313"
src = ["src"]
include = ["src/**.py", "tests/**.py"]

lint.select = [
    "ALL",
]

lint.ignore = [
    "ANN401",  # allow any-type
    "D",       # ignore docstring requirements
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "TID252",  # allow parent-relative imports in tests
    "PLR2004", # allow magic values in comparisons
    "S101",    # allow assert usage
    "SLF001",  # allow private member access
    "PERF203", # allow try-except in loops
    "S603",    # allow subprocess without shell=False checks
    "S607",    # allow partial executable paths in subprocess
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]
no-lines-before = ["local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
packages = ["src", "tests"]
python_version = "3.13"

strict = true
pretty = true
allow_redefinition = true
allow_untyped_calls = true
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"

[tool.uv]
version = "0.9.18"
